# genai-recruiter-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  graph.py  llm_client.py  main.py  schemas.py  state.py  structured_output.py
app/modules/embedding/: __init__.py  build_index.py
app/modules/exit_advisor/: advisor.py  prompts.py
app/modules/fine_tuning/: compare.py  dataset_builder.py  launch_job.py
app/modules/info_advisor/: advisor.py  retriever.py
app/modules/main_agent/: agent.py  prompts.py
app/modules/sched_advisor/: advisor.py  date_resolver.py  repository.py  tools.py
app/modules/scheduling/: db_setup.py
data/raw/: db_Tech.sql
docs/: ACCEPTANCE_REPORT.md  DEVLOG.md  PROJECT_SPECIFICATION.md  PROJECT_TASKS.md  one_turn_flowchart.json
streamlit_app/: streamlit_main.py
tests/: eval_replay.py  test_compare.py  test_date_resolver.py  test_embedding_build_index.py  test_eval_replay_cases.py  test_evals.ipynb  test_exit_advisor.py  test_fine_tuning_dataset.py  test_graph.py  test_info_advisor.py  test_info_retriever.py  test_launch_job.py  test_llm_client.py  test_main.py  test_main_agent.py  test_retriever.py  test_scenarios.py  test_sched_advisor.py  test_scheduling_repository.py  test_schemas.py  test_structured_output.py  verify_canonical_flows.py
