[project]
name = "genai-recruiter-bot"
version = "0.1.0"
description = "Multi-agent SMS-style recruiting chatbot (GenAI course final project)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not real_api'"
markers = [
    "real_api: makes real OpenAI/DB calls (excluded from the default run; use `pytest -m real_api` or target the file directly)",
]
